--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 		<div class="menu-toggle"></div>
 		<nav>
 			<ul>
-				<li><a href="#" class="active">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">Team</a></li>
-				<li><a href="#">Portafolio</a></li>
-				<li><a href="#">Contacto</a></li>
+			<li><a href="#" class="active">Home</a></li>
+				<li><a href="#">pacientes</a></li>
+				<li><a href="#">CItas</a></li>
+				<li><a href="#">Informes</a></li>
+				<li><a href="#">Medicos</a></li>
+				<li><a href="#">Usuarios</a></li>
+				<li><a href="#">Caja</a></li>
+				<li><a href="#">Configuracion</a></li>
 			</ul>
 		</nav>
 		<div class="clearfix"></div>
