--- a/bootstrap/administrador.html
+++ b/bootstrap/administrador.html
@@ -13,13 +13,13 @@
   </head>
   <body>
   <nav class="navbar navbar-expand-lg  navbar-light bg-light">
-  <a class="logo navbar-brand" href="#">LOGO</a>
+  <a class="navbar-brand" href="#">LOGO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">HOME</a>
       </li>
