agrego opcion de disabled para el caso de un usuario sin privilegios que pueda ver opciones pero no seleccionarlas

--- a/bootstrap/administrador.html
+++ b/bootstrap/administrador.html
@@ -27,14 +27,11 @@
        <a class="nav-link" href="#">Pacientes</a>
       </li>
         </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#">Citas</a>
+      <li class="nav-item disabled">
+       <a class="nav-link disabled" href="#">Citas</a>
       </li>
         </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#">Pacientes</a>
-      </li>
-        </li>
+    
       <li class="nav-item">
        <a class="nav-link" href="#">Medicos</a>
       </li>
@@ -49,7 +46,8 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Usuarios</a>
           <a class="dropdown-item" href="#">Informes</a>
-          <a class="dropdown-item" href="#">Configiuracion</a>
+          <a class="dropdown-item" href="#">Seguimientos</a>
+          <a class="dropdown-item disabled" href="#">Configiuracion</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Más opciones</a>
         </div>
