--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,22 +1,115 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<title>SASS-BOOTSTRAP</title>
+	<!-- CSS de estilos -->
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<!-- CSS de Bootstrap -->
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<!-- Iconos de Fontawesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+</head>
+<body>
+<!-- HEADER -->
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>index.html con bootstrap 4</h1>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+<!-- /HEADER -->
+
+<!-- NAVBAR RESPONSIVO-->
+<header class="cabecera">
+<nav id="header" class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img  src="asets/img//logo.jpg" alt="logo Quiropractiloco"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#" id="home"> <i class="fas fa-home"></i> Home <span class="sr-only">(current) </span> </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="#" id="citas" tabindex="-1" aria-disabled="false"><i class="far fa-calendar-alt"></i> Citas</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" id="pacients">  <i class="fas fa-wheelchair"></i> Pacientes</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="#" id="medics"> <i class="fas fa-user-md"></i> Medicos</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="#" id="informs"><i class="fas fa-tablet-alt"></i> Informes</a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" href="#" id="segs"> <i class="fas fa-file-medical-alt"></i> Seguimientos</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fab fa-whmcs"></i>
+          Herramientas
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#"><i class="fas fa-database"></i> Base de Datos</a>
+          <a class="dropdown-item" href="#"><i class="far fa-clone"></i> Modulos</a>
+          <a class="dropdown-item" href="#"> <i class="fas fa-users"></i> Usuarios</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#"> <i class="fab fa-diaspora"></i> Cambiar clave</a>
+          <a class="dropdown-item" href="#"> <i class="fas fa-power-off"></i> Salir</a>
+        </div>
+      </li>
+      
+    </ul>
+  
+  </div>
+</nav>
+</header>
+<!-- FIN NAVBAR RESPONSIVO -->
+<section>
+	<div class="container">
+		<div class="row">
+			<div class="contenido" id="contenido">
+		
+			</div>
+			
+		</div>
+	</div>
+	
+	
+</section>
+
+
+<!-- Inicio del Footer -->
+  <footer id="footer" class="pb-4 pt-4">
+  	
+  <div class="container">
+      <div class="row">
+      	<div class="col-12 col-lg">
+      		<a href="#">FOOTER CONTENT</a>
+      	</div>
+      	<div class="col-12 col-lg"><!-- Movility First jeje -->
+      		<a href="#">Version: 1.00.1</a><!-- Analizar versionador GitHub -->
+      	</div>
+      	</div>
+      </div>
+  </div>
+  	
+  </footer>
+
+
+</div><!-- Fin Container -->
+
+
+
+	
+<!-- Javascript -->
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="js/loader.js" type="text/javascript" charset="utf-8"></script>
+</body>
 </html>
