--- a/bootstrap/pacientes.html
+++ b/bootstrap/pacientes.html
@@ -1,66 +1,11 @@
-<!doctype html>
-<html lang="es">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap-emma.css">
-
-    <title>Administrador-bootstrap</title>
-  </head>
-  <body>
-  <nav class="navbar navbar-expand-lg  navbar-light bg-light">
-  <a class="navbar-brand" href="#">LOGO</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">HOME</a>
-      </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#">Pacientes</a>
-      </li>
-        </li>
-      <li class="nav-item disabled">
-       <a class="nav-link disabled" href="#">Citas</a>
-      </li>
-        </li>
-    
-      <li class="nav-item">
-       <a class="nav-link" href="#">Medicos</a>
-      </li>
-        </li>
-      <li class="nav-item">
-       <a class="nav-link" href="#">Caja</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Herramientas
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Usuarios</a>
-          <a class="dropdown-item" href="#">Informes</a>
-          <a class="dropdown-item" href="#">Seguimientos</a>
-          <a class="dropdown-item disabled" href="#">Configuracion</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Cambiar clave</a>
-          <a class="dropdown-item" href="#">Logout</a>
-        </div>
-      </li>
-   
-    </ul>
-    
-  </div>
-</nav>
-<!-- Fin Nav Bar -->
-<!-- inicia body content -->
-<section class="formulario-pacientes">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Moudlo-Pacientes</title>
+</head>
+<body>
+	<section class="formulario-pacientes">
  <div class="form-group row">
   <label for="example-text-input" class="col-2 col-form-label">Text</label>
   <div class="col-10">
@@ -141,11 +86,5 @@
 </div>
 
 </section>
-<!-- fin body content -->
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
